CustomInput component, SEO meta tags for pages, improved video performance

--- a/index.html
+++ b/index.html
@@ -5,12 +5,29 @@
 	<meta charset="UTF-8" />
 	<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>CAD Test task</title>
+	<!-- Open Graph -->
+	<meta property="og:title" content="CAD Exchanger" />
+	<meta property="og:description"
+		content="We provide innovative solutions for schools and universities, helping students develop skills that will be in demand in the future." />
+	<meta property="og:image"
+		content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrRWnUT1OdxrUCtRn8gPke-kOZFzc8JAAflQ&s" />
+
+	<!-- Twitter Card -->
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="CAD Exchanger" />
+	<meta name="twitter:description"
+		content="We provide innovative solutions for schools and universities, helping students develop skills that will be in demand in the future." />
+	<meta name="twitter:image"
+		content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrRWnUT1OdxrUCtRn8gPke-kOZFzc8JAAflQ&s" />
+
+	<!-- <title>CAD Exchanger</title> -->
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+	<!-- <link rel="stylesheet" href="node_modules/lite-youtube-embed/src/lite-yt-embed.css" /> -->
 </head>
 
 <body>
 	<div id="root"></div>
+	<!-- <script src="node_modules/lite-youtube-embed/src/lite-yt-embed.js"></script> -->
 	<script type="module" src="/src/main.tsx"></script>
 </body>
 
